<?xml version="1.0"?>
<package>
  <name>ihmc_ros</name>
  <version>0.3.2</version>
  <description>The ihmc_ros package contains several ROS packages for interacting with the IHMC Whole Body Controller for humanoid robots.</description>

  <maintainer email="bshrewsbury@ihmc.us">The People's Glorious Point of Contact</maintainer>

  <license>Apache 2.0</license>

  <url type="website">http://bitbucket.org/ihmcrobotics/ihmc_ros</url>

  <author email="bshrewsbury@ihmc.us">The People's Glorious Author</author>

  <export>
	<metapackage />
  </export>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>ihmc_msgs</run_depend>
  <run_depend>ihmc_diagnostics</run_depend>

</package>
