<?xml version="1.0"?>
<package>
  <name>ihmc_sim</name>
  <version>0.3.0</version>
  <description>The ihmc_sim package contains the IHMC humanoid robot controller integrated with the IHMC Simulation Construction Set sim environment</description>

  <maintainer email="bshrewsbury@ihmc.us">The People's Glorious Point of Contact</maintainer>

  <license>Apache 2.0</license>

  <url type="website">http://bitbucket.org/ihmcrobotics/ihmc_ros</url>

  <author email="bshrewsbury@ihmc.us">The People's Glorious Author</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>rospy</run_depend>
  <run_depend>ihmc_msgs</run_depend>
  <run_depend>ihmc_models</run_depend>

</package>
